implementando hibernate na aplicação Ajustando o mapeamento das chaves estrangeiras da entidade